# Core

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  force_fpu.py  plan-dashDisplay.prompt.md  platformio.ini  requirements.md  requirements.txt  sdkconfig.esp32dev  upload.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yml  discord-merge-notify.yml  discord-pr-notify.yml
.scripts/: README.md  build.py  build.sh  ci-local.sh  install.py  install.sh  setup-gitbash.ps1  setup.sh  shared.py  shared.sh  test.py  test.sh  uninstall.py  uninstall.sh
.scripts/bash/: install.sh  shared.sh  uninstall.sh
.scripts/powershell/: README.md  build.ps1  install.ps1  repair.ps1  setup-gitbash.ps1  shared.ps1  test.ps1  uninstall.ps1
docs/: ARCHITECTURE.md  CAN.md  CANbus.md  CleanInterface.md  Design.md  FH-Rulebook.md  HARDWARE.md  LibraryStructure.md  MOTOR_README  Package_Manager.md  README.md  RULES.md  Rules.md  SAFETY.md  SingleHeaderUsage.md  TESTING.md  TestsFixed.md  Usage.md  dependency.md
docs/modules/: BATTERY.md  CAN.md  CORE.md  DASH.md  IMD.md  INVERTER.md  PEDALS.md  PUMP.md
docs/references/: FORMULAS.md  GLOSSARY.md  OBSERVER-PATTERN.md  STANDARDS.md  WIRING.md
examples/: clean_interface_example.cpp  dependency_injection_examples.cpp  publisher_examples.cpp  racing_telemetry_simple.cpp
include/: README.md  battery.h  can.h  core.h  lv_conf.h  main.h  pot_converter.h  shared_variables.h
include/core/: task.h
lib/: README.md
lib/battery/: battery.h  bms_messages.h  messages.h
lib/can/: can.h  core.cpp  core.h  dispatcher.cpp  dispatcher.h  esp32_s3_can_service.h  manager.cpp  manager.h  (+9 more)
modules/pump/: CMakeLists.txt
modules/pump/include/core/pump/: tmp.h
modules/pump/src/: tmp.cpp
src/: README.md  display_7inch.h  display_smoke.cpp  display_smoke.h  freertos.cpp  global_inits.cpp  lvgl_port.h  main.cpp  main.h
test/: README.md
tests/: CMakeLists.txt
tests/battery/: CMakeLists.txt  test_tmp.cpp
tests/can/: CMakeLists.txt  test_tmp.cpp
tests/core/: CMakeLists.txt  test_tmp.cpp
tests/display/: CMakeLists.txt  test_tmp.cpp
tests/imd/: CMakeLists.txt  test_tmp.cpp
tests/inverter/: CMakeLists.txt  test_tmp.cpp
tests/pedals/: CMakeLists.txt  test_tmp.cpp
tests/pump/: CMakeLists.txt  test_tmp.cpp
(+215 files in other folders)
